# bismika

./: CMakeLists.txt  README.md  bismika.cpp
bundles/: CMakeLists.txt  script.sh
bundles/fractal-plugin/: CMakeLists.txt
bundles/fractal-plugin/include/: FractalPluginActivator.h
bundles/fractal-plugin/resources/: manifest.json
bundles/fractal-plugin/src/: FractalPluginActivator.cpp
bundles/resources-plugin/: CMakeLists.txt  manifest.json
bundles/resources-plugin/include/: ResourcesPluginActivator.h
bundles/resources-plugin/resources/: manifest.json
bundles/resources-plugin/src/: ResourcesPluginActivator.cpp
cmake/: cppmicroservices.cmake  efsw.cmake  external_deps.cmake  saucer.cmake
include/framework/: ExtendedFramework.h  PathInformer.h  PluginsListener.h
include/modules/: InMemorySchemaHandler.h
include/utils/: StringUtils.h
src/: bismika.cpp
src/framework/: ExtendedFramework.cpp  PathInformer.cpp  PluginsListener.cpp
src/modules/: InMemorySchemaHandler.cpp
src/utils/: MimeTypes.cpp
